force-app/main/default/objects/Account/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <description>Stores Country codes for accounts</description>
    <label>Country Code</label>
    <length>18</length>
    <type>Text</type>
</CustomField>