force-app/main/default/objects/Account/fields/Number_Of_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Contacts__c</fullName>
    <description>Holds the total number of Contacts for the Account</description>
    <label>Number Of Contacts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>