force-app/main/default/objects/Account/fields/Total_Opportunity_Amounts__c.field-meta.xml
<CustomField>
    <fullName>Total_Opportunity_Amounts__c</fullName>
    <description>This field displays sum of amount for opportunities related to this Account Object.</description>
    <label>Total Opportunity Amount</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>