force-app/main/default/objects/Account/validationRules/Validate_Country_Codes.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Country_Codes</fullName>
    <active>true</active>
    <description>This checks that the value entered is one of the allowed country codes.</description>
    <errorConditionFormula>NOT( REGEX( UPPER(Country_Code__c), &quot;^(KE|UG|TZ|RW|BI|SS|US|GB|CA|AU)$&quot;) )</errorConditionFormula>
    <errorMessage>Enter a valid country code, for example KE or UG.</errorMessage>
</ValidationRule>